--- a/1/3.Completede_Crud/package.json
+++ b/1/3.Completede_Crud/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "scripts": {
+        "start-dev" : "PORT=3000 nodemon app.js "
+   },
+   "dependencies": {
+        "express": "^4.17.1"
+    }
 }
