--- a/1/9.Mandatory2/package.json
+++ b/1/9.Mandatory2/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "cross-env PORT=9090 nodemon.cmd --ext 'js,html' app.js"
+    "start-dev": "cross-env PORT=9090 nodemon.cmd --ext 'js,html,css' app.js"
   },
   "keywords": [],
   "author": "",
