--- a/1/9.Mandatory2/package.json
+++ b/1/9.Mandatory2/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cross-env": "^7.0.3",
-    "express": "^4.17.1"
+    "dotenv": "^9.0.1",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.6.0"
   }
 }
